fix: background color matches on IE

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -211,7 +211,7 @@ h3 {
 
   .side-nav .dropbtn {
     padding: 10px 10px 10px 30px;
-    background-color: inherit;
+    background-color: #111111;
     border: none;
     color: #ccc;
     font-size: 22px;
@@ -266,7 +266,7 @@ h3 {
   outline: none;
   color: #d49419;
   padding: 14px 16px;
-  background-color: inherit;
+  background-color:#3B5998;
   font-family: inherit;
   font-weight: bold;
   margin: 0;
@@ -526,10 +526,11 @@ table, th, td {
   width: 20%;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #3B5998;
   overflow-x: hidden;
-  padding-top: 20px;
+  padding-top: 30px;
   display: block;
+  margin-right: 10px;
 }
 
 .sidenav a:hover {
